wip: home page almost finished

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -11,7 +11,7 @@ interface Props {
   <head>
     <BaseHead title={Astro.props.title} description={Astro.props.description} />
   </head>
-  <body class="mx-auto">
+  <body class="mx-auto dark:bg-gray-950 dark:text-white">
     <slot />
   </body>
 </html>
