--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,12 +42,12 @@ body {
   @apply text-base;
 }
 
-main {
+/* main {
   width: 720px;
   max-width: calc(100% - 2em);
   margin: auto;
   padding: 3em 1em;
-}
+} */
 
 /* Styles for post content */
 /*
