--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,68 +1,52 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import Header from "../components/Header.astro";
+import RootLayout from "./RootLayout.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
-    <BaseHead title={title} description={description} />
-    <style>
-      main {
-        width: calc(100% - 2em);
-        max-width: 100%;
-        margin: 0;
-      }
-      .hero-image img {
-        box-shadow: var(--box-shadow);
-      }
-    </style>
-  </head>
-
-  <body>
-    <Header />
-    <main>
-      <article class="post leading-[1.7]">
-        <div class="w-full">
-          {
-            heroImage && (
-              <img
-                width={1020}
-                height={510}
-                src={heroImage}
-                alt={`Hero image for ${title}`}
-                class="block mx-auto rounded-xl shadow-md"
-              />
-            )
-          }
-        </div>
-        <div class="max-w-3xl px-8 m-auto py-4">
-          <div class="mb-4 py-4 text-center leading-none">
-            <div class="mb-2">
-              <FormattedDate date={pubDate} />
-              {
-                updatedDate && (
-                  <div class="italic">
-                    Last updated on <FormattedDate date={updatedDate} />
-                  </div>
-                )
-              }
-            </div>
-            <h1 class="mb-2">{title}</h1>
-            <hr />
+<RootLayout title={title} description={description}>
+  <Header />
+  <main>
+    <article class="post leading-[1.7]">
+      <div class="w-full">
+        {
+          heroImage && (
+            <img
+              width={1020}
+              height={510}
+              src={heroImage}
+              alt={`Hero image for ${title}`}
+              class="block mx-auto rounded-xl shadow-md"
+            />
+          )
+        }
+      </div>
+      <div class="max-w-3xl px-8 m-auto py-4">
+        <div class="mb-4 py-4 text-center leading-none">
+          <div class="mb-2">
+            <FormattedDate date={pubDate} />
+            {
+              updatedDate && (
+                <div class="italic">
+                  Last updated on <FormattedDate date={updatedDate} />
+                </div>
+              )
+            }
           </div>
-
-          <slot />
+          <h1 class="mb-2">{title}</h1>
+          <hr />
         </div>
-      </article>
-    </main>
 
-    <Footer />
-  </body>
-</html>
+        <slot />
+      </div>
+    </article>
+  </main>
+
+  <Footer />
+</RootLayout>
