feat: finish blog page & home page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,9 @@
 ---
-import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
+import { SITE_TITLE } from "../consts";
 ---
 
 <header>
-	<nav class="text-center">
-		{SITE_TITLE}
-	</nav>
+  <nav class="py-8 text-center text-2xl">
+    <a href="/">{SITE_TITLE}</a>
+  </nav>
 </header>
