--- a/src/components/cards/BlogCard.astro
+++ b/src/components/cards/BlogCard.astro
@@ -29,7 +29,7 @@ const date = format(blog.data.pubDate, "MMM d, yyyy");
     }
 
     {/* title */}
-    <h2 class="text-xl font-bold mt-2">{blog.data.title}</h2>
+    <h2 class="text-lg font-bold mt-2">{blog.data.title}</h2>
 
     <p class="text-sm text-gray-400">
       {date}
