--- a/src/components/cards/Card.astro
+++ b/src/components/cards/Card.astro
@@ -45,7 +45,7 @@
 </style>
 
 <article class="card cursor-pointer flex flex-col relative h-full">
-  <div class="rounded-md flex flex-col grow p-[10px] z-[2] h-full card-content">
+  <div class="rounded-md flex flex-col grow p-6 z-[2] h-full card-content">
     <slot />
   </div>
 </article>
