--- a/src/components/cards/SmallBlogCard.astro
+++ b/src/components/cards/SmallBlogCard.astro
@@ -16,7 +16,7 @@ const date = format(blog.data.pubDate, "MMM d, yyyy");
   <Card>
     <div class="flex flex-row gap-4 justify-between">
       <div class="flex-grow-0">
-        <h1 class="text-xl font-bold">{blog.data.title}</h1>
+        <h1 class="text-lg font-bold">{blog.data.title}</h1>
         <p class="text-sm text-gray-400">
           {date}
 
