--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,6 +24,7 @@ const {
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
+<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 
 <!-- Font preloads -->
 <link
